# cmd_line_game

./: .clang-format  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  README.md  build.ninja  cmake_install.cmake  compile_commands.json  main.cpp
.cache/clangd/index/: main.cpp.818F56FF8B87A2D9.idx
